Fix color contrast on site selector in the sidebar when no results are found.

--- a/client/components/site-selector/style.scss
+++ b/client/components/site-selector/style.scss
@@ -147,6 +147,10 @@
 	padding: 10px 20px;
 }
 
+.layout__secondary .site-selector__no-results {
+	color: var( --sidebar-heading-color );
+}
+
 .site-selector__add-new-site {
 	padding: 0;
 	border-top: 1px solid darken( $sidebar-bg-color, 10% );
